--- a/Amazon Page/assets/css/style.css
+++ b/Amazon Page/assets/css/style.css
@@ -13,13 +13,13 @@ body {
 
 #logo img {
     height: 1.7em;
-    padding: 0.3em;
+    padding: 0.7em;
 }
 
-#navbar {
+#navbar , #anchor {
     background-color: #364759;
     font-size: 0.9em;
-    padding: 0.5em;
+    padding: 0.6em;
 }
 
 #navbar ul li {
@@ -53,7 +53,8 @@ main {
 
 #guides {
     background-image: url("../images/bg-image.png");
-    padding: 3em 0.8em;
+    background-size: auto;
+    padding: 4em 0.8em;
     margin-bottom: 1.5em;
 }
 
@@ -81,26 +82,52 @@ main {
     border-radius: 10%;
     margin: 1em;
     box-shadow: 10px 10px 10px grey;
+    object-fit: cover;
 }
 
 .sectionTitle {
     text-align: left;
+    font-weight: bold;
 }
 
-.sectionLink {
-    
+.sectionTitle a {
+    margin-left: 1.3em;
+    text-decoration: none;
+    color: #045662;
+}
+
+.secondSection {
+}
+
+.secondSection p {
+    margin: 0.5em 0 2em 0;
+    text-align: center;
 }
 
 .secondSection img {
     width: 100%;
+    height: 23em;
+}
+
+footer {
+    text-align: center;
+}
+
+#anchor {
+    padding 1em;
 }
 
 #footerLogo {
     background-color: #222f3f;
 }
 
-#anchor {
-    background-color: #364759;
+#footerLogo img {
+    height: 3em;
+    padding: 3em;
+}
+
+#anchor a {
+    color: #fff;
 }
 
 
